# OpenSearch-RAG

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: setting.py
src/: api.py  injection.py  retrieval.py
